fix organization text overflow

--- a/ckanext/requestdata/fanstatic/css/main.css
+++ b/ckanext/requestdata/fanstatic/css/main.css
@@ -226,6 +226,8 @@
 }
 .requested-data-org-title{
     margin: 7px 15px 0px 0px;
+    width: 23%;
+    word-wrap: break-word;
 }
 .requested-data-order-btn{
     float: right;
